--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <img src="images/test.png" alt="test">
+    <img style="max-width: 50px;" src="images/test.png" alt="test">
 </body>
-</html>>
+</html>
